--- a/estilos.css
+++ b/estilos.css
@@ -7,7 +7,11 @@
 #streaming h2 {
     margin-top: 60px;
     color: #005780;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    position: relative;
+    right: 165px;
+    font-size: 40px;
+    
 }
 
 
@@ -16,29 +20,56 @@
     color: #70706E;
 }
 
-#streaming img {
-}
-#chromakey{
+#streaming img {}
+
+#chromakey {
     background-color: #5C9FC0;
     padding-top: 50px;
     padding-bottom: 50px;
-    
 }
-#chromakey h2{
+
+#chromakey h2 {
     color: #005780;
     margin-top: 20px;
     Weight: 400px;
     size: 40px;
     line-height: 70px;
+    position: relative;
+    right: 200px;
+    font-size: 40px;
 }
-#chromakey p{
+
+#chromakey p {
     margin-right: 100px;
     color: #70706E;
-    font-style: normal ;
+    font-style: normal;
     Weight: 400;
     size: 14px;
     line-height: 24px;
 }
-h2{
+
+h2 {
     text-align: center;
+}
+
+#RNV {
+    background: linear-gradient(214.85deg, #0DAEDB 11.2%, #037FA2 79.48%);
+}
+
+#RNV h2 {
+    font-size: 45px;
+    color: #FFFFFF;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#RNV img {
+    width: 100%;
+    margin-bottom: 100px;
+}
+
+#RNV p {
+    font-size: 17px;
+    color: #FFFFFF;
 }
