--- a/estilos.css
+++ b/estilos.css
@@ -7,7 +7,8 @@
 #streaming h2 {
     margin-top: 80px;
     color: #005780;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 43px;
 }
 
 #streaming p {
@@ -15,13 +16,12 @@
     color: #70706E;
 }
 
-#streaming img {
-}
 #chromakey{
-    background-color: #5C9FC0;
+    background-color:#e5f4ff ;
     padding-top: 50px;
     padding-bottom: 50px;
 }
+
 #chromakey h2{
     color: #005780;
     margin-top: 20px;
@@ -29,18 +29,34 @@
     font-size: 40px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 70px;
-    position: relative;
-    right: 200px;
-    font-size: 40px;
 }
+
 #chromakey p{
     margin-right: 100px;
     color: #70706E;
-    font-style: normal;
+    font-style: normal ;
     Weight: 400;
     size: 14px;
     line-height: 24px;
 }
-h2{
-    text-align: center;
+
+#rnv {
+    background-color: #0DAEDB;
+    padding-top: 60px;
+    padding-bottom: 60px; 
+}
+
+#rnv h2{
+    text-align:center;
+    color:white;
+    margin-top: 20px;
+    margin-bottom: 49px;
+    font-style: normal;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+#rnv p{
+    color:white
 }
